--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand text-dark" href="#">WEB_LABO</a>
+          <a class="navbar-brand text-dark" href="#">SHIMIZU_LABO</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
