--- a/work.html
+++ b/work.html
@@ -41,13 +41,13 @@
         <h1>Our Works</h1>
     </div>
     <div class="row">
-        <div class="card col-sm-6">
+        <div class="card col-12 col-sm-6">
             <div class="card-body">
                 <a href="#" class="link-secondary">某音楽教室様</a>
             </div>
             <img src="./images/work1.png"  class="img-responsive" alt="My avatar" />
         </div>
-        <div class="card col-sm-6">
+        <div class="card col-12 col-sm-6">
             <div class="card-body">
                 <p>お問い合わせをお待ちしております。</p>
             </div>
