--- a/work.html
+++ b/work.html
@@ -45,13 +45,13 @@
             <div class="card-body">
                 <a href="#" class="link-secondary">某音楽教室様</a>
             </div>
-            <img src="./images/work1.png"  class="img-responsive" alt="My avatar" />
+            <img src="./images/work1.png"  alt="My avatar" />
         </div>
         <div class="card col-6 col-sm-6">
             <div class="card-body">
                 <p>お問い合わせをお待ちしております。</p>
             </div>
-            <img src="./images/comming_soon.jpg"  class="img-responsive" alt="My avatar" />
+            <img src="./images/comming_soon.jpg"   alt="My avatar" />
         </div>
     </div>
 
