--- a/work.html
+++ b/work.html
@@ -41,18 +41,15 @@
         <h1>Our Works</h1>
     </div>
     <div class="row">
-        <div class="card col-12 col-sm-6">
+        <div class="card col-12 col-sm-12">
             <div class="card-body">
                 <a href="#" class="link-secondary">某音楽教室様</a>
             </div>
             <img src="./images/work1.png" class="bd-placeholder-img card-img-bottom" width="100%" alt="My avatar" />
         </div>
-        <div class="card col-12 col-sm-6">
-            <div class="card-body">
-                <p>お問い合わせをお待ちしております。</p>
-            </div>
-            <img src="./images/comming_soon.jpg" class="bd-placeholder-img card-img-bottom" width="100%" alt="My avatar" />
-        </div>
+        <!-- <div class="card col-12 col-sm-12">
+            ここに実績を追加していく
+        </div> -->
     </div>
 
    <!--  <div class="work-title">
