--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="card col-12 col-sm-6">
             <div class="card-body">
-                <a href="#" class="link-secondary">某音楽教室様</a>
+                <a href="https://django-iori.github.io/coa" class="link-secondary">某音楽教室様</a>
             </div>
             <img src="./images/work1.png" class="bd-placeholder-img card-img-bottom" width="100%" alt="My avatar" />
         </div>
